[package]
name = "slatepack"
version = "0.2.0"
authors = ["j01tz"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bs58 = "0.3.0"
sha2 = "0.8.1"
regex = "1.3.6"
lazy_static = "1.4.0"
minify = "1.1"
serde_json = "1.0"
